--- a/src/components/loggedInUser/orders/orderReview/orderReview.scss
+++ b/src/components/loggedInUser/orders/orderReview/orderReview.scss
@@ -1,96 +1,102 @@
-.orderReview-wrapper {
-
-	.order-form-container {
-		background-color: white;
-		text-align: center;
-		width: 60%;
-
-		.order-header {
-			border-bottom: 2px solid black;
-			padding: 15px 0;
-
-			.row > div {
-				text-align: left;
-			}
+// .orderReview-wrapper {
+// 	.duplicateFunction {
+// 		margin-bottom: 1vh;
 		
-			img {
-				margin: 0 auto;
-				width: 30%;
-			}
+// 		background-color:red;
+	
+// 	}
 
-			h1 {
-				display: inline-block;
-				font-size: 1vw;
-			}
+// 	.order-form-container {
+// 		background-color: white;
+// 		text-align: center;
+// 		width: 60%;
 
-			input {
-				width: 80%;
-				height: 90%;
-				float: right;
-				font-size: 1vw;
-			}
-		}
+// 		.order-header {
+// 			border-bottom: 2px solid black;
+// 			padding: 15px 0;
 
-		.order-body {
-			.items_header {
-				&>div {
-					border: 2px solid black;
-				}
+// 			.row > div {
+// 				text-align: left;
+// 			}
+		
+// 			img {
+// 				margin: 0 auto;
+// 				width: 30%;
+// 			}
 
-				&>div:first-child{
-					text-align: left;
-					display: inline-block;
-				}
+// 			h1 {
+// 				display: inline-block;
+// 				font-size: 1vw;
+// 			}
 
+// 			input {
+// 				width: 80%;
+// 				height: 90%;
+// 				float: right;
+// 				font-size: 1vw;
+// 			}
+// 		}
 
-				p {
-					font-weight: 900;
-					font-size: 1vw;
-				}
-			}
+// 		.order-body {
+// 			.items_header {
+// 				&>div {
+// 					border: 2px solid black;
+// 				}
 
-			.items_row {
-				&>div:first-child {
-					border: 2px solid black;
-					text-align: left;
-
-					.remvoe-btn {
-						background-color: red;
-						border-radius: 50px; 
-						color: white;
-						padding: 0 5px;
-						margin-right: 10px;
-						cursor: pointer;
-
-						&:hover {
-							box-shadow: 3px 3px lightgray;
-						}
-					}
-				}
-
-				&>div>.row > div {
-					border: 2px solid black;
-				}
-
-				p {
-					font-size: 1vw;
-				}
-			}
-		}
-	}
+// 				&>div:first-child{
+// 					text-align: left;
+// 					display: inline-block;
+// 				}
 
 
-	.note-container {
-		width: 60%;
-		background-color: white;
+// 				p {
+// 					font-weight: 900;
+// 					font-size: 1vw;
+// 				}
+// 			}
 
-		h1 {
-			text-align: center;
-		}
+// 			.items_row {
+// 				&>div:first-child {
+// 					border: 2px solid black;
+// 					text-align: left;
 
-		textarea {
-			width: 100%;
-			height:	30vh;
-		}
-	}
-}
+// 					.remvoe-btn {
+// 						background-color: red;
+// 						border-radius: 50px; 
+// 						color: white;
+// 						padding: 0 5px;
+// 						margin-right: 10px;
+// 						cursor: pointer;
+
+// 						&:hover {
+// 							box-shadow: 3px 3px lightgray;
+// 						}
+// 					}
+// 				}
+
+// 				&>div>.row > div {
+// 					border: 2px solid black;
+// 				}
+
+// 				p {
+// 					font-size: 1vw;
+// 				}
+// 			}
+// 		}
+// 	}
+
+
+// 	.note-container {
+// 		width: 60%;
+// 		background-color: white;
+
+// 		h1 {
+// 			text-align: center;
+// 		}
+
+// 		textarea {
+// 			width: 100%;
+// 			height:	30vh;
+// 		}
+// 	}
+// }
