--- a/src/index.css
+++ b/src/index.css
@@ -24,11 +24,15 @@ code {
 }
 
 .align-left {
-  text-align: left;
+  text-align: left !important;
 }
 
 .align-right {
-  text-align: right;
+  text-align: right !important;
+}
+
+.align-center: {
+  text-align: center !important;
 }
 
 .border-bottom {
